--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
@@ -28,7 +30,7 @@ jobs:
         gradle-version: '8.14.1'
 
     - name: Build with Gradle
-      run: gradle socialsdk4j:jar socialsdk4j:sourcesJar socialsdk4j:javadocJar socialsdk4j:sharedLibraryLinux socialsdk4j:test
+      run: gradle socialsdk4j:unzipSocialSdk socialsdk4j:jar socialsdk4j:sourcesJar socialsdk4j:javadocJar socialsdk4j:sharedLibraryLinux socialsdk4j:test
     - name: Upload Linux Natives
       uses: actions/upload-artifact@v4.6.2
       with:
@@ -49,6 +51,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
@@ -63,7 +67,7 @@ jobs:
         gradle-version: '8.14.1'
 
     - name: Build with Gradle
-      run: gradle socialsdk4j:jar socialsdk4j:sharedLibraryMacos socialsdk4j:test
+      run: gradle socialsdk4j:unzipSocialSdk socialsdk4j:jar socialsdk4j:sharedLibraryMacos socialsdk4j:test
     - name: Upload macOS Natives
       uses: actions/upload-artifact@v4.6.2
       with:
@@ -78,6 +82,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
@@ -92,7 +98,7 @@ jobs:
         gradle-version: '8.14.1'
 
     - name: Build with Gradle
-      run: gradle socialsdk4j:jar socialsdk4j:sharedLibraryWindows socialsdk4j:test
+      run: gradle socialsdk4j:unzipSocialSdk socialsdk4j:jar socialsdk4j:sharedLibraryWindows socialsdk4j:test
     - name: Upload Windows Natives
       uses: actions/upload-artifact@v4.6.2
       with:
@@ -112,6 +118,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
