--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ fabric_loader_version=0.16.14
 fabric_api_version=0.115.6+1.21.1
 neoforge_version=21.1.169
 spruceui_version=6.2.3+1.21.1
+socialsdk4j_version=1.0-SNAPSHOT
