--- a/mod/build.gradle
+++ b/mod/build.gradle
@@ -23,6 +23,10 @@ subprojects {
         archivesName = "$rootProject.archives_name-$project.name"
     }
 
+    configurations.configureEach {
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    }
+
     repositories {
         // Add repositories to retrieve artifacts from in here.
         // You should only use this when depending on other mods because
